samples/_failures_safe/1761275858_1cc164_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90e7c098.c: In function ‘main’:
./samples/SAFE/__tmp_90e7c098.c:139:13: error: expected declaration or statement at end of input
  139 |             }
      |             ^
./samples/SAFE/__tmp_90e7c098.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90e7c098.c:139:13: error: expected declaration or statement at end of input
